Fix Alignment issues
Idea is to have two lists of tags in the frontmatter, 1st list of tags should contain only essential tags to be displayed in the blog lists, 2nd list will contain all the tags which can be used for future seach feature implementation

--- a/src/components/blogs.css
+++ b/src/components/blogs.css
@@ -95,5 +95,6 @@
     font-size: 1vh;
     color: gray;
     padding-left: 0.6em;
+    margin-top: 1em;
     vertical-align: -webkit-baseline-middle;
 }
